# demo-sdd

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
.cursor/: manifest.yml
.cursor/rules/: application-layer.mdc  clean-architecture.mdc  domain-layer.mdc  error-handling.mdc  fastapi-patterns.mdc  infrastructure-layer.mdc  mongodb-patterns.mdc  observer.mdc  project-overview.mdc  python-standards.mdc  security-auth.mdc  spec-driven-design.mdc  testing.mdc
.cursor/skills/brownfield-mapping/: SKILL.md
.cursor/skills/commit-push/: SKILL.md
.cursor/skills/create-repository/: SKILL.md
.cursor/skills/create-route/: SKILL.md
.cursor/skills/create-test/: SKILL.md
.cursor/skills/create-use-case/: SKILL.md
.cursor/skills/design-feature/: SKILL.md
.cursor/skills/implement-validate/: SKILL.md
.cursor/skills/quick-mode/: SKILL.md
.cursor/skills/spec-driven-design/: SKILL.md
.cursor/skills/specify-feature/: SKILL.md
.cursor/skills/state-management/: SKILL.md
.cursor/skills/tasks-breakdown/: SKILL.md
.specs/: README.md
.specs/codebase/: ARCHITECTURE.md  AUDIT.md  CONCERNS.md  CONVENTIONS.md  HTTP_API.md  INTEGRATIONS.md  PERMISSIONS.md  PERSISTENCE.md  README.md  RUNTIME.md  SECURITY.md  STACK.md  STRUCTURE.md  TESTING.md
.specs/features/exemplo-crud-entidade/: spec.md
.specs/project/: PROJECT.md  ROADMAP.md  STATE.md
.specs/quick/001-hello-world/: TASK.md
src/: main.py  settings.py
src/application/: __init__.py  exceptions.py
src/domain/: __init__.py
src/infrastructure/: __init__.py
tests/: conftest.py
(+16 files in other folders)
