[tool.poetry]
name = "demo-sdd"
version = "0.1.0"
description = "Demo project — Spec-Driven Design + Clean Architecture"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = {extras = ["email"], version = "^2.7.0"}
motor = "^3.4.0"
dependency-injector = "^4.41.0"
python-dotenv = "^1.0.0"
httpx = "^0.27.0"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest-timeout = "^2.3.1"
pytest-xdist = "^3.6.0"
httpx = "^0.27.0"
faker = "^25.0.0"
freezegun = "^1.5.1"
mongomock-motor = "^0.0.29"
hypothesis = {extras = ["cli"], version = "^6.100.0"}
ruff = "^0.4.7"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
